--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+  <h1 class="heading">PROBABILITY & STATISTICS CALCULATOR</h1>
     <div id="body">
       <div class="card card-1">
         <div
